// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge groups screenshot 1`] = `
<div
  class="p-4 bg-white space-y-4"
>
  <div
    class="flex flex-wrap gap-1"
  >
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        React
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        TypeScript
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Tailwind
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Storybook
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1"
  >
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        New
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Updated
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Deprecated
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <span>
      Status:
    </span>
    <div
      class="0 1"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Active
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge variants screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="flex flex-wrap gap-2"
  >
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Default
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Secondary
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Destructive
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        Outline
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        123
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Online
      </span>
    </div>
    <div
      class="0"
    >
      <span
        class="truncate"
      >
        🔥 Hot
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button states screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <button
    class="0"
  >
    Normal
  </button>
  <button
    class="0"
    disabled=""
  >
    Disabled
  </button>
  <button
    class="0"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Loading
  </button>
  <button
    class="0"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Please wait...
  </button>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button variants screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <div
    class="space-x-2"
  >
    <button
      class="0"
    >
      Default
    </button>
    <button
      class="0"
    >
      Destructive
    </button>
    <button
      class="0"
    >
      Outline
    </button>
    <button
      class="0"
    >
      Secondary
    </button>
    <button
      class="0"
    >
      Ghost
    </button>
    <button
      class="0"
    >
      Link
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      class="0"
    >
      Small
    </button>
    <button
      class="0"
    >
      Default
    </button>
    <button
      class="0"
    >
      Large
    </button>
    <button
      class="0"
    >
      🔍
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      class="0"
      disabled=""
    >
      Disabled
    </button>
    <button
      class="0"
      disabled=""
    >
      <svg
        class="mr-2 h-4 w-4 animate-spin"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="opacity-25"
          cx="12"
          cy="12"
          r="10"
          stroke="currentColor"
          stroke-width="4"
        />
        <path
          class="opacity-75"
          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          fill="currentColor"
        />
      </svg>
      Loading
    </button>
    <button
      class="0"
    >
      <span
        class="mr-2"
      >
        <span>
          ←
        </span>
      </span>
      With Icon
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match card layouts screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-gray-50"
>
  <div
    class="0"
  >
    <div
      class="0"
    >
      <h3
        class="0"
      >
        Basic Card
      </h3>
      <p
        class="0"
      >
        Simple card layout
      </p>
    </div>
    <div
      class="0"
    >
      <p>
        This is the card content.
      </p>
    </div>
    <div
      class="0"
    >
      <button
        class="0"
      >
        Action
      </button>
    </div>
  </div>
  <div
    class="0"
  >
    <div
      class="0"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="0"
        >
          Card with Badge
        </h3>
        <div
          class="0"
        >
          <span
            class="truncate"
          >
            New
          </span>
        </div>
      </div>
    </div>
    <div
      class="0"
    >
      <p>
        Card with badge in header.
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match complex card screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="0"
  >
    <div
      class="0"
    >
      <div
        class="flex items-start justify-between"
      >
        <div>
          <h3
            class="0"
          >
            Project Dashboard
          </h3>
          <p
            class="0"
          >
            Overview of your projects
          </p>
        </div>
        <div
          class="0"
        >
          <span
            class="truncate"
          >
            3 Active
          </span>
        </div>
      </div>
    </div>
    <div
      class="0 1"
    >
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-sm text-gray-500"
          >
            Completed
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-sm text-gray-500"
          >
            In Progress
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center justify-between"
        >
          <span>
            Website Redesign
          </span>
          <div
            class="0"
          >
            <span
              class="truncate"
            >
              Design
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <span>
            Mobile App
          </span>
          <div
            class="0"
          >
            <span
              class="truncate"
            >
              Development
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="0 1"
    >
      <button
        class="0"
      >
        View All
      </button>
      <button
        class="0"
      >
        New Project
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Cross-platform Consistency > should match component integration screenshot 1`] = `
<div
  class="p-4 bg-gray-50"
>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-4xl"
  >
    <div
      class="0"
    >
      <div
        class="0"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="0"
          >
            User Profile
          </h3>
          <div
            class="0"
          >
            <span
              class="truncate"
            >
              Active
            </span>
          </div>
        </div>
        <p
          class="0"
        >
          Manage your account settings
        </p>
      </div>
      <div
        class="0 1"
      >
        <div
          class="relative w-full"
        >
          <label
            class="0"
            for=":rc:"
          >
            Display Name
          </label>
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
            >
              <span
                class="0"
              >
                <span>
                  👤
                </span>
              </span>
            </div>
            <input
              class="0 1"
              id=":rc:"
              value="John Doe"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <label
            class="0"
            for=":rd:"
          >
            Email
          </label>
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
            >
              <span
                class="0"
              >
                <span>
                  ✉️
                </span>
              </span>
            </div>
            <input
              class="0 1"
              id=":rd:"
              type="email"
              value="john@example.com"
            />
          </div>
        </div>
      </div>
      <div
        class="0 1"
      >
        <button
          class="0"
        >
          Cancel
        </button>
        <button
          class="0"
        >
          Save Changes
        </button>
      </div>
    </div>
    <div
      class="0"
    >
      <div
        class="0"
      >
        <h3
          class="0"
        >
          Project Status
        </h3>
        <p
          class="0"
        >
          Current project overview
        </p>
      </div>
      <div
        class="0"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center justify-between"
          >
            <span>
              Website
            </span>
            <div
              class="0"
            >
              <span
                class="truncate"
              >
                In Progress
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              Mobile App
            </span>
            <div
              class="0"
            >
              <span
                class="truncate"
              >
                Planning
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              API
            </span>
            <div
              class="0"
            >
              <span
                class="truncate"
              >
                Blocked
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="0"
      >
        <button
          class="0"
        >
          View Details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Dark Mode Screenshots > should match dark mode components screenshot 1`] = `
<div
  class="p-4 bg-slate-900 text-white"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-x-2"
    >
      <button
        class="0"
      >
        Default
      </button>
      <button
        class="0"
      >
        Destructive
      </button>
      <button
        class="0"
      >
        Outline
      </button>
    </div>
    <div
      class="0"
    >
      <div
        class="0"
      >
        <h3
          class="0 1"
        >
          Dark Card
        </h3>
        <p
          class="0 1"
        >
          Card in dark theme
        </p>
      </div>
      <div
        class="0"
      >
        <div
          class="relative w-full"
        >
          <div
            class="relative"
          >
            <input
              class="0 3"
              id=":re:"
              placeholder="Dark input..."
            />
          </div>
        </div>
      </div>
      <div
        class="0"
      >
        <button
          class="0"
        >
          Dark Action
        </button>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <div
        class="0"
      >
        <span
          class="truncate"
        >
          Dark Badge
        </span>
      </div>
      <div
        class="0"
      >
        <span
          class="truncate"
        >
          Dark Outline
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input form screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <form
    class="space-y-4 w-80"
  >
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="0"
          for=":r8:"
        >
          First Name
        </label>
        <div
          class="relative"
        >
          <input
            class="0"
            id=":r8:"
            placeholder="Enter first name..."
            value="John"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="0"
          for=":r9:"
        >
          Email
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
          >
            <span
              class="0"
            >
              <span>
                ✉️
              </span>
            </span>
          </div>
          <input
            class="0 1"
            id=":r9:"
            placeholder="Enter email..."
            type="email"
            value="john@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="0"
          for=":ra:"
        >
          Phone
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby=":ra:-helper"
            class="0"
            id=":ra:"
            placeholder="Enter phone..."
            type="tel"
          />
        </div>
        <p
          class="0 1"
          id=":ra:-helper"
        >
          Include country code
        </p>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="0 1"
          for=":rb:"
        >
          Password
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby=":rb:-helper"
            class="0"
            id=":rb:"
            placeholder="Enter password..."
            type="password"
          />
        </div>
        <p
          class="0 1"
          id=":rb:-helper"
        >
          Password must be at least 8 characters
        </p>
      </div>
    </div>
  </form>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input variants screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-white w-80"
>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="0"
        id=":r0:"
        placeholder="Default input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="0"
        id=":r1:"
        placeholder="Email input"
        type="email"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="0"
        disabled=""
        id=":r2:"
        placeholder="Disabled input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="0"
        id=":r3:"
        placeholder="Error input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <div
        class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
      >
        <span
          class="0"
        >
          <span>
            🔍
          </span>
        </span>
      </div>
      <input
        class="0 1"
        id=":r4:"
        placeholder="With left icon"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="0 2"
        id=":r5:"
        placeholder="With right icon"
      />
      <div
        class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none"
      >
        <span
          class="0"
        >
          <span>
            ✓
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="relative w-full"
    >
      <label
        class="0"
        for=":r6:"
      >
        Complete Input
      </label>
      <div
        class="relative"
      >
        <input
          aria-describedby=":r6:-helper"
          class="0"
          id=":r6:"
          placeholder="With label and helper"
        />
      </div>
      <p
        class="0 1"
        id=":r6:-helper"
      >
        This is helper text
      </p>
    </div>
  </div>
  <div>
    <div
      class="relative w-full"
    >
      <label
        class="0 1"
        for=":r7:"
      >
        Error Input
      </label>
      <div
        class="relative"
      >
        <input
          aria-describedby=":r7:-helper"
          class="0"
          id=":r7:"
          placeholder="With error state"
        />
      </div>
      <p
        class="0 1"
        id=":r7:-helper"
      >
        This is an error message
      </p>
    </div>
  </div>
</div>
`;
